welcome.lessons.welcome.summative.Moria.scala.code
setDirection(Direction.East)
while (!estSurBiscuit){
  avance()
}
prendBiscuit()
setDirection(Direction.West)
while (!estSurBiscuit){
  avance()
}
recule()
poseBiscuit()
